--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -35,7 +35,7 @@ jobs:
     - run: flake8 .
 
     - name: Build package
-      run: python -m build
+      run: python setup.py sdist bdist_wheel
 
     - run: bumpversion patch
 
