--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -37,16 +37,14 @@ jobs:
     - name: Build package
       run: python setup.py sdist bdist_wheel
 
-    - run: bumpversion patch
 
-    - name: push version change
+    - name: bumpversion
       if: github.ref == 'refs/heads/main'
       run: |
 
         git config --global user.name ${GITHUB_ACTOR}
         git config --global user.email ${GITHUB_ACTOR}@markata.dev
-        git subtree push --prefix my-docs origin gh-pages
-
+        bumpversion patch
         git remote add github "https://$GITHUB_ACTOR:$GITHUB_TOKEN@github.com/$GITHUB_REPOSITORY.git"
         git pull github ${GITHUB_REF} --ff-only
         git push github HEAD:${GITHUB_REF}
